Fixed results page spacing

--- a/public/css/results.css
+++ b/public/css/results.css
@@ -118,7 +118,7 @@
 }
 
 .separator {
-	width: 100%; 
+	margin-right: 20px; 
  	height: 1px; 
 	background: gray; 
 	overflow: hidden;
